[package]
name = "vesper"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "probes"
]

[dependencies]
async-trait = "0.1.57"
clap = { version = "3.2.20", features = ["derive"] }
chrono = "0.4.22"
dns-parser = { version = "0.8.0", features = ["with-serde"] }
etherparse = "0.12.0"
libc = "0.2.132"
mio = "0.8.4"
openssl = "0.10.41"
redbpf = { git = "https://github.com/bcelenza/redbpf.git", features = ["load"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.85"
tls-parser = "0.11.0"
tokio = { version = "1.24.2", features = ["full"] }
tracing-subscriber = "0.3.15"
tracing = "0.1"
futures = "0.3"

probes = { path = "./probes" }