[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
memoffset = "0.6"
redbpf-macros = { git = "https://github.com/bcelenza/redbpf.git", package = "redbpf-macros" }
redbpf-probes = { git = "https://github.com/bcelenza/redbpf.git", package = "redbpf-probes" }

[build-dependencies]
cargo-bpf = { git = "https://github.com/bcelenza/redbpf.git", package = "cargo-bpf", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "network"
path = "src/network/main.rs"
required-features = ["probes"]

[[bin]]
name = "connection"
path = "src/connection/main.rs"
required-features = ["probes"]
